oxiplate-derive/tests/broken/derive/external-parens.stderr
error: proc-macro derive panicked
 --> tests/broken/derive/external-parens.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: not yet implemented: need to handle when non-name-value data is provided
