oxiplate-derive/tests/broken/derive/external-parens.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate("foo.oxip")]
struct Data;

fn main() {}
